# BROS

./: .envrc  .gitignore  .justfile  LICENSE  README.md  flake.nix  new_node.py  test.fbs
.build_utils/: clean.py  create.py  new_node.py  rename_node.py
.build_utils/templates/go_zenoh_template/: flake.nix  go.mod  go.sum  main.go
.build_utils/templates/python_zenoh_template/: flake.nix  pyproject.toml
.build_utils/templates/rust_zenoh_template/: Cargo.toml  flake.nix
camera/: .gitignore  Cargo.toml  README.md  flake.nix
camera/src/: main.rs
go_demo/: .gitignore  flake.nix  go.mod  go.sum  main.go  zenoh-c.nix
mavlink_bridge/: Cargo.toml  README.md  flake.nix
mavlink_bridge/src/: MAV_generated.rs  main.rs  state_generated.rs
myn/: Cargo.toml  flake.nix
myn/src/: main.rs  stru.rs  tagged_string.rs
mynode/: Cargo.toml  README.md  flake.nix  pyproject.toml
mynode/src/: main.rs
mynode/src/mynode/: __init__.py
mynp/: flake.nix  main.py  pyproject.toml
mynp/src/mynp/: __init__.py  tagged_string.py
python_demo/: .gitignore  flake.nix  main.py  pyproject.toml
python_demo/src/python_demo/: __init__.py  tagged_string.py
python_sub/: .gitignore  flake.nix  pyproject.toml
python_sub/src/hello_world/: __init__.py
rust_demo/: Cargo.toml  flake.nix
rust_demo/src/: main.rs
rust_sub/: Cargo.toml  flake.nix
rust_sub/src/: main.rs
schemas/: MAV.fbs  state.fbs
simpledemo/: .gitignore  README.md  flake.nix  pyproject.toml
simpledemo/src/simpledemo/: __init__.py
simplenode/: README.md  flake.nix  pyproject.toml
simplenode/src/simplenode/: __init__.py
zenohd/: flake.nix
