[package]
name = "camera"
version = "0.1.0"
edition = "2024"

[dependencies]
a8mini-camera-rs = "0.1.7"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
image = "0.25.9"
tokio = { version = "1", features = ["full"] }
zenoh = "1.0"

[[bin]]
name = "camera"
path = "src/main.rs"
