[package]
name = "myn"
version = "0.1.0"
edition = "2024"

[dependencies]

rmp-serde = "1.3.1"
serde = "1.0.228"

tokio = { version = "1.49.0", features = ["full"] }

zenoh = {version = ">=1.7.2", features = ["shared-memory", "unstable"]}
zenoh-ext = ">=1.7.2"


[[bin]]
name = "myn"
path = "src/main.rs"
