[project]
name = "python_demo"
version = "0.1.0"
description = "python_demo - Python Zenoh Node"
requires-python = ">=3.12"
dependencies = [
 "eclipse-zenoh>=1.9",
 "flatbuffers>=25.12.19",
 "msgpack>=1.1.2",
]


# this defines the entrypoint of the python program.
[project.scripts]
python_demo = "python_demo:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
