[package]
name = "rust_zenoh_template"
version = "0.1.0"
edition = "2024"

[dependencies]
flatbuffers = "25.12.19"
tokio = { version = "1.49.0", features = ["full"] }

zenoh = {version = ">=1.7.2", features = ["shared-memory"]}
zenoh-ext = ">=1.7.2"

[[bin]]
name = "rust_zenoh_template"
path = "src/main.rs"
